--- a/package.json
+++ b/package.json
@@ -9,9 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.18.4",
+    "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.14.20",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "4.13.0",
+    "antd": "^5.12.2",
+    "apexcharts": "^3.44.2",
+    "apexcharts-clevision": "^3.28.5",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "cookies-next": "^4.1.0",
+    "dayjs": "^1.11.10",
+    "file-saver": "^2.0.5",
+    "html-to-text": "^9.0.5",
+    "jodit-react": "^4.0.15",
+    "moment": "^2.29.4",
+    "mui-one-time-password-input": "^2.0.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.9.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-google-autocomplete": "^2.7.3",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.0.1",
+    "react-pdf": "^9.0.0",
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.0.4",
+    "react-window": "^1.8.10",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "sass": "^1.69.5",
+    "sheetjs-style": "^0.15.8",
+    "yup": "^1.4.0"
   }
 }
